--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,50 @@
     font-size: 1.5em;
     font-weight: bold;
 }
+
+.regions {
+    fill: #8a8a8a;
+    stroke: #000
+}
+
+.gratBackground {
+    fill:#b1b9b9
+}
+
+
+.gratLines{
+    fill: none;
+    stroke: #999;
+    stroke-width: 1px;
+}
+
+
+.map {
+    border: medium solid #999;
+    margin: 10px 0 0 20px;
+}
+
+.specific_countries {
+    stroke: #000;
+    stroke-width: 1px;
+    stroke-linecap: round;
+}
+
+.chart {
+    background-color: rgba(128,128,128,.2);
+    border: medium solid #999;
+    float: right;
+    margin: 10px 20px 0 0;
+}
+
+.numbers {
+    fill: #000;
+    font-family: sans-serif;
+    font-size: 10px;
+}
+
+.chartTitle {
+    font-family: sans-serif;
+    font-size: 1.5em;
+    font-weight: bold;
+}
